--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "shared-libs",
     "version": "1.0.0",
     "dependencies": {
+        "axios": "^1.7.2",
         "moment": "^2.29.1"
     }
 }
