--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "1.0.0",
     "dependencies": {
         "axios": "^1.7.2",
+        "firebase": "^10.13.0",
         "moment": "^2.29.1"
     }
 }
