--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "moment": "^2.29.1"
     },
     "devDependencies": {
+        "@firebase/rules-unit-testing": "^3.0.4",
         "@types/jest": "^29.5.12",
         "jest": "^29.7.0",
         "ts-jest": "^29.2.5"
